backend-dev.err
SKIP_DB=true, starting server without MongoDB connection.
SKIP_DB=true, starting server without MongoDB connection.
file:///C:/Users/Jugal/OneDrive/Desktop/React/borrowly/backend/src/services/mockItemStore.js:3
import { getPublicMockUserById } from "./mockAuthStore.js";
         ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module './mockAuthStore.js' does not provide an export named 'getPublicMockUserById'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.20.0
SKIP_DB=true, starting server without MongoDB connection.
SKIP_DB=true, starting server without MongoDB connection.
SKIP_DB=true, starting server without MongoDB connection.
SKIP_DB=true, starting server without MongoDB connection.
SKIP_DB=true, starting server without MongoDB connection.
SKIP_DB=true, starting server without MongoDB connection.
^C^C